--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="favicon.ico" type="image/x-icon" rel="icon" />
   <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" />
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>手刻網站範例</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
