--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             data-bs-display="static" aria-expanded="false">
             <!-- 語言切換 (暫無功能因為沒做分頁) -->
           </button>
-          <ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">
-            <li><button class="dropdown-item" type="button">Tw 中文版</button></li>
-            <li><button class="dropdown-item" type="button">En 英文版</button></li>
+          <ul class="dropdown-menu dropdown-menu-start dropdown-menu-lg-start">
+            <li><button class="dropdown-item" type="button">Tw</button></li>
+            <li><button class="dropdown-item" type="button">En</button></li>
           </ul>
         </div>
       </div>
@@ -291,44 +291,7 @@
       </div>
     </div>
 
-    <div class="foot">
-      <div class="img_foot">
-        <div class="nav ">
-          <img class="w-25" src="./img/logo.png" alt="">
-          <div class="col">
-            <P>政達五金企業有限公司</P>
-            <P>JEN TA BADGE WORKS.CO., LTD</P>
-            <div class="add"><samp> 地址：</samp>
-              <p>新北市中和區中山路二段568巷8號</p>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <iframe src="" frameborder="0"></iframe>
-
-    <iframe src="https://embed.lottiefiles.com/animation/142271">123</iframe>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    
 
 
 
