--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 
       <div class="col-6 text-center">
-        <a href="#">
+        <a href="https://g.co/gemini/share/7ef1db18451b">
           <div class="photo border-start">
             <div class="img_c">
               <img class="gold w-100 " src="/img/A001.png" alt="">
